--- a/index.html
+++ b/index.html
@@ -753,9 +753,9 @@
                     <a href="#faq" class="footer-link">Preguntas Frecuentes</a>
                 </div>
                 <div class="footer-legal">
-                    <a href="terminos-uso.html" class="footer-link">Términos y condiciones</a>
-                    <a href="politica-privacidad.html" class="footer-link">Política de privacidad</a>
-                    <a href="politica-cookies.html" class="footer-link">Política de cookies</a>
+                    <a href="terminos-uso.html" target="_blank" rel="noopener noreferrer" class="footer-link">Términos y condiciones</a>
+                    <a href="politica-privacidad.html" target="_blank" rel="noopener noreferrer" class="footer-link">Política de privacidad</a>
+                    <a href="politica-cookies.html" target="_blank" rel="noopener noreferrer" class="footer-link">Política de cookies</a>
                 </div>
                 <div class="footer-copyright">
                     <p>© 2025 SPMarketing – ImpactoDigital - Todos los derechos reservados.</p>
@@ -767,7 +767,7 @@
     <!-- Cookie Banner -->
     <div id="cookie-banner" class="cookie-banner">
         <div class="cookie-content">
-            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra <a href="#">política de cookies</a>.</p>
+            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra <a href="politica-cookies.html" target="_blank" rel="noopener noreferrer">política de cookies</a>.</p>
             <div class="cookie-buttons">
                 <button id="accept-cookies" class="btn-accept">Aceptar</button>
                 <button id="reject-cookies" class="btn-reject">Rechazar</button>
