--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
             <h1>APRENDE BARBERÍA Y MONTA TU NEGOCIO</h1>
             <h2>¿Te gustaría aprender a realizar cortes de barba y cabello desde cero y montar tu propio negocio?</h2>
             <a href="#benefits" class="cta-button">VER CONTENIDO</a>
+            
+            <!-- Prueba Social -->
+            <div class="social-proof">
+                <div class="social-proof-content">
+                    <div class="social-proof-stat">
+                        <span class="social-proof-number">2,000+</span>
+                        <span class="social-proof-label">Estudiantes Satisfechos</span>
+                    </div>
+                    <div class="social-proof-divider"></div>
+                    <div class="social-proof-stat">
+                        <span class="social-proof-number">98%</span>
+                        <span class="social-proof-label">Tasa de Satisfacción</span>
+                    </div>
+                    <div class="social-proof-divider"></div>
+                    <div class="social-proof-stat">
+                        <span class="social-proof-number">4.9/5</span>
+                        <span class="social-proof-label">Valoración Promedio</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -106,7 +126,7 @@
     <section class="video-presentation">
         <div class="container">
             <div class="video-container">
-                <iframe width="992" height="583" src="https://www.youtube.com/embed/fuQXBUPSC6M?autoplay=1&mute=1&loop=0&playlist=fuQXBUPSC6M&controls=1" 
+                <iframe width="992" height="583" src="https://www.youtube.com/embed/fuQXBUPSC6M?controls=1" 
                     title="🔥 Aprende Barbería y Monta tu Negocio" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -807,5 +827,11 @@
     <script src="js/chat.js"></script>
     <script src="js/faq.js"></script>
     <script src="js/analytics.js"></script>
+    <script src="js/floating-popups.js"></script>
+    
+    <!-- Popups Flotantes de Clientes Satisfechos -->
+    <div class="floating-popups">
+        <!-- Los popups se generarán dinámicamente con JavaScript -->
+    </div>
 </body>
 </html>
